added auth api
