# internal/models/auth.go
@@ -1,0 +1,22 @@
+package models
+
+import "time"
+
+type Token struct {
+	Token     string    `json:"token"`
+	Type      string    `json:"type"`
+	ExpiresAt time.Time `json:"expires_at"`
+}
+
+type Login struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type Register struct {
+	FullName string `json:"full_name" validate:"required"`
+	Role     string `json:"role" validate:"required"`
+	Username string `json:"username" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
